tests/asm-link/_consistency/section-union/bank-conflict/rgbasm.err
error: conflicting banks specified for section "conflicting banks"
   ╭─[ one-two.asm:5:15 ]
   │
 5 │ SECTION UNION "conflicting banks", WRAMX, BANK[{SECOND}]
   │               ─────────┬─────────  
   │                        ╰─────────── previously placed in bank 4
   │
   ├─[ one-two.asm:5:15 ]
   │
 5 │ SECTION UNION "conflicting banks", WRAMX, BANK[{SECOND}]
   │               ─────────┬─────────  
   │                        ╰─────────── redefined in bank 1 here
───╯
1 error generated.
